refactor: optimización de constantes y pruebas unitarias